[project]
name = "fastapi-ipware"
version = "0.1.0"
description = "FastAPI/Starlette-native wrapper for python-ipware to get client IP addresses"
keywords = ["fastapi", "starlette", "ipware", "ip-address", "client-ip", "proxy", "x-forwarded-for"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-ipware>=3.0.0",
    "starlette>=0.49.1",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/fastapi-ipware" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
fastapi-ipware = "fastapi_ipware:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = ["pytest>=8.3.3","pyright>=1.1.380","ruff>=0.8.0"]

[tool.pyright]
exclude = ["example.py", ".venv", "**/__pycache__"]

